--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,13 @@
-<div class="container">
+<div class="container flex flex-col justify-center mx-auto">
+<div class="input-container flex flex-col items-center">
+  <h1 id="title" class="text-teal-500">URL Shortener</h1>
+  <input type="text" class="mt-1 px-3 py-2 bg-white border shadow-sm border-slate-300 placeholder-slate-400 focus:outline-none focus:border-sky-500 focus:ring-sky-500 block w-full rounded-md sm:text-sm focus:ring-1" 
+    placeholder="Enter an URL link" name="longUrl" [(ngModel)]="longUrl">
+  <button (click)="shorten()">Shorten</button>
 
+  <div class="flex">
+    <span>{{shortUrl}}</span> 
+    <button>Copy</button>
+  </div>
+</div>
 </div>
