--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,8 +2,8 @@
   height: 100vh;
 }
 
-@layer components {
-  .btn-indigo {
-    @apply px-4 py-2 rounded-r-lg bg-indigo-600 text-white;
-  }
-}
+// @layer components {
+//   .btn-indigo {
+//     @apply px-4 py-2 rounded-r-lg bg-indigo-600 text-white;
+//   }
+// }
