--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,13 +4,13 @@
     <div class="flex w-5/6 ">
       <input type="text" class="px-3 py-2 w-full bg-white border shadow-sm border-slate-300 placeholder-slate-400 focus:outline-none focus:border-sky-500 focus:ring-sky-500 rounded-l-lg sm:text-sm focus:ring-1" 
         placeholder="Enter an URL link" name="longUrl" [(ngModel)]="longUrl">
-      <button class="btn-indigo" (click)="shorten()">Shorten</button>
+      <button class="px-4 py-2 rounded-r-lg bg-indigo-600 text-white" (click)="shorten()">Shorten</button>
     </div>
     
     <!-- Shortened link -->
     <div class="flex mt-3" *ngIf="shortUrl">
       <p class="border-2 border-indigo-600 rounded-l-lg px-4 py-2">{{shortUrl}}</p>
-      <button class="btn-indigo" (click)="copyUrl()">{{copyText}}</button>
+      <button class="px-4 py-2 rounded-r-lg bg-indigo-600 text-white" (click)="copyUrl()">{{copyText}}</button>
     </div>
 
     <ng-container *ngIf="validation"><p class="text-red-500">{{validation}}</p></ng-container>
